--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Natours API with MongoDB",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
   "author": "AndreasDEV",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
