--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Natours API with MongoDB",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "SET NODE_ENV=production npm server.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,7 @@
   "author": "AndreasDEV",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   }
