--- a/config.env
+++ b/config.env
@@ -1,3 +1,5 @@
 NODE_ENV = development
 PORT = 3000
+DATABASE = mongodb+srv://andreasdev:<PASSWORD>@cluster0-5u73l.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD = UB6FNPJ0Ynhp3tKX
