--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
