--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
