--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
