--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production npm server.js"
+    "start:prod": "SET NODE_ENV=production npm server.js",
+    "debug": "ndb server.js"
   },
   "repository": {
     "type": "git",
