--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production npm server.js",
+    "start:prod": "set NODE_ENV=production&& nodemon server.js",
     "debug": "ndb server.js"
   },
   "repository": {
