--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "AndreasDEV",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.3",
