--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT = 3000
 DATABASE = mongodb+srv://andreasdev:<PASSWORD>@cluster0-5u73l.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD = UB6FNPJ0Ynhp3tKX
+
+JWT_SECRET = secret-secure-private-long-jwt-secret
+JWT_EXPIRES_IN = 90d
