Implement password reset feature. Implement nodemailer with mailtrap service. | Update #20 |

--- a/config.env
+++ b/config.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD = UB6FNPJ0Ynhp3tKX
 
 JWT_SECRET = secret-secure-private-long-jwt-secret
 JWT_EXPIRES_IN = 90d
+
+EMAIL_USERNAME = 63df1f3286c7e0
+EMAIL_PASSWORD = b7ee9bd393d3a3
+EMAIL_HOST = smtp.mailtrap.io
+EMAIL_PORT = 25
