--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.2.1",
     "slugify": "^1.3.4",
     "validator": "^11.1.0"
   },
