--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
     "nodemailer": "^6.2.1",
+    "pug": "^2.0.4",
     "slugify": "^1.3.4",
     "validator": "^11.1.0",
     "xss-clean": "^0.1.1"
