--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "AndreasDEV",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
