--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^6.2.1",
     "pug": "^2.0.4",
+    "sharp": "^0.22.1",
     "slugify": "^1.3.4",
     "validator": "^11.1.0",
     "xss-clean": "^0.1.1"
