--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pug": "^2.0.4",
     "sharp": "^0.22.1",
     "slugify": "^1.3.4",
+    "stripe": "^7.4.0",
     "validator": "^11.1.0",
     "xss-clean": "^0.1.1"
   },
